--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Foto de perfil -->
         <td style="width: 80px; padding-right: 15px; vertical-align: top;">
             <div style="width: 70px; height: 70px; border-radius: 50%; border: 2px solid #222; overflow: hidden;">
-                <img src="https://media.licdn.com/dms/image/v2/C5603AQEfBNTBc5syRA/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1602007039644?e=1755129600&v=beta&t=2IzjmANr3LIwzJccAgSwUg0Q8oQPtLVcecIPRSINCNU" alt="Liz Andreina Contreras Hernández"
+                <img src="https://drive.google.com/file/d/1pb5zZrQ6OUrUtx6oJUGTCnsCh4N4uz-r/view?usp=drive_link" alt="Liz Andreina Contreras Hernández"
                      width="70" height="70" style="display: block;" />
             </div>
         </td>
@@ -73,3 +73,4 @@
 </table>
 </body>
 </html>
+
