--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!-- Foto de perfil -->
         <td style="width: 80px; padding-right: 15px; vertical-align: top;">
             <div style="width: 70px; height: 70px; border-radius: 50%; border: 2px solid #222; overflow: hidden;">
-                <img src="https://drive.google.com/file/d/1pb5zZrQ6OUrUtx6oJUGTCnsCh4N4uz-r/view?usp=drive_link" alt="Liz Andreina Contreras Hernández"
+                <img src="https://drive.google.com/uc?export=view&id=1KL2ADBIERkuwbbIcwrHbeeJZ-lG03-v5" alt="Liz Andreina Contreras Hernández"
                      width="70" height="70" style="display: block;" />
             </div>
         </td>
@@ -73,4 +73,5 @@
 </table>
 </body>
 </html>
+
 
