--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <!-- Firma horizontal con web personal -->
 <table cellpadding="0" cellspacing="0" style="font-family: 'Arial', sans-serif; font-size: 13px; color: #333; border-collapse: collapse; min-width: 450px; max-width: 600px; background: #ffffff; margin: 0; padding: 0;">
     <tr>
-        <!-- Foto de perfil -->
+        <!-- Foto de perfil 
         <td style="width: 80px; padding-right: 15px; vertical-align: top;">
             <div style="width: 70px; height: 70px; border-radius: 50%; border: 2px solid #222; overflow: hidden;">
                 <img src="https://drive.google.com/uc?export=view&id=1KL2ADBIERkuwbbIcwrHbeeJZ-lG03-v5" alt="Liz Andreina Contreras Hernández"
                      width="70" height="70" style="display: block;" />
             </div>
-        </td>
+        </td>-->
        
         <!-- Información principal -->
         <td style="vertical-align: top; padding-right: 20px; border-right: 1px solid #eee;">
@@ -73,5 +73,6 @@
 </table>
 </body>
 </html>
+
 
 
